Changes for DateTime-Event-ICal

- fixed the order of operations: bysetpos x span

0.00_02
- bysetpos
- count
- by(units)

0.00_01
- base implementation:
  until, interval, dtstart, dtend, until
